<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="main.Start">

    <TextView
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Bluetooth Messenger"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCreateChannel"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:text="Create Channel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnJoin" />

    <Button
        android:id="@+id/btnCreateAppOwner"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginBottom="64dp"
        android:text="Settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCreateChannel"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnJoin"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_marginTop="136dp"
        android:text="Join Channel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <!--
    <Button
        android:id="@+id/btnChangeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Change Name"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp" />
        -->

</androidx.constraintlayout.widget.ConstraintLayout>