<?xml version="1.0" encoding="utf-8"?>
  <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="main.view.Settings">

  <EditText
      android:id="@+id/editTextOwnerName"
      android:layout_width="255dp"
      android:layout_height="46dp"
      android:layout_marginStart="4dp"
      android:layout_marginTop="22dp"
      android:ems="10"
      android:inputType="textPersonName"
      android:text="Rambo"
      app:layout_constraintEnd_toStartOf="@+id/btnCreateAppOwner"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView3" />

  <EditText
      android:id="@+id/editTextDeleteChannel"
      android:layout_width="255dp"
      android:layout_height="46dp"
      android:layout_marginStart="4dp"
      android:layout_marginTop="24dp"
      android:ems="10"
      android:inputType="textPersonName"
      android:text="..."
      app:layout_constraintEnd_toStartOf="@+id/btnCreateAppOwner"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView4" />

  <TextView
      android:id="@+id/textView3"
      android:layout_width="253dp"
      android:layout_height="22dp"
      android:layout_marginTop="16dp"
      android:text="Change Name:"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.025"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/textView4"
      android:layout_width="253dp"
      android:layout_height="22dp"
      android:layout_marginTop="28dp"
      android:text="Remove Channel by Name:"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.025"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextOwnerName" />

  <TextView
      android:id="@+id/textViewErrorBySettings"
      android:layout_width="370dp"
      android:layout_height="32dp"
      android:layout_marginTop="72dp"
      app:layout_constraintBottom_toTopOf="@+id/deleteAll"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.487"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editTextDeleteChannel"
      app:layout_constraintVertical_bias="0.11" />

  <Button
      android:id="@+id/btnAppOwner"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="60dp"
      android:text="Add"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.75"
      app:layout_constraintStart_toEndOf="@+id/editTextOwnerName"
      app:layout_constraintTop_toTopOf="parent" />

  <Button
      android:id="@+id/btnDeleteChannel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="72dp"
      android:text="Remove"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.75"
      app:layout_constraintStart_toEndOf="@+id/editTextOwnerName"
      app:layout_constraintTop_toBottomOf="@+id/btnAppOwner" />

  <Button
      android:id="@+id/deleteAll"
      android:layout_width="378dp"
      android:layout_height="42dp"
      android:layout_marginBottom="6dp"
      android:text="Delete All"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.515"
      app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>